--- a/vite-app/package.json
+++ b/vite-app/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-anchor-link-smooth-scroll-v2": "^2.0.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
